<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/cardview_dark_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UploadActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">
                <GridLayout
                    android:columnCount="2"
                    android:rowCount="1"
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                <Button
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:id="@+id/btn_upload_photo"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/primary_text_dark"
                    android:layout_margin="4dp"
                    android:background="@android:color/background_dark"
                    android:text="@string/select_an_image" />

                <Button

                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:textColor="@android:color/primary_text_dark"
                    android:id="@+id/btn_upload_video"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:background="@android:color/background_dark"
                    android:text="@string/select_a_video" />

                <Button

                    android:textColor="@android:color/primary_text_dark"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:id="@+id/btn_take_photo"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:background="@android:color/background_dark"
                    android:text="@string/take_an_image" />

                <Button

                    android:textColor="@android:color/primary_text_dark"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:id="@+id/btn_take_video"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:background="@android:color/background_dark"
                    android:text="@string/take_a_video" />
                </GridLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp">
                <Button
                    android:layout_margin="4dp"
                    android:textColor="@android:color/primary_text_dark"
                    android:id="@+id/btn_upload"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@android:color/background_dark"
                    android:text="@string/post_it" />
                </LinearLayout>
        </LinearLayout>


</RelativeLayout>